samples/_failures_safe/1761565157_670b4a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6785f8f4.c:189:1: error: expected ‘{’ at end of input
  189 | void freeGraph(struct
      | ^~~~
